starMe doesn't add Links any more but spans to fix curser flickering

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -438,7 +438,7 @@ div#trash-container {
 	color: #fff;
 }
 
-.star-me > a {
+.star-me {
 	color: #fff;
 	text-decoration: none;
 }
